[package]
name = "questrade-asset-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
mongodb = { version = "3.1.0", features = ["sync"] }
dotenv = "0.15.0"
colored = "2.1.0"
