[package]
name = "questrade-asset-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.9"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
structopt = "0.3.26"
colored = "2.1.0"
